# wireguard-vpn-manager

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.sh
servers/tunnel/: docker-compose.yml
src/vpn_manager/: __init__.py  clients.py  keys.py  manager.py  services.py  utils.py
src/vpn_manager/clients/: __init__.py  clients.py  utils.py
src/vpn_manager/keys/: __init__.py  keys.py  utils.py
src/vpn_manager/servers/: __init__.py  config.py  servers.py  utils.py
src/vpn_manager/services/: __init__.py  docker.py  services.py
tests/: __init__.py  conftest.py  test_clients.py  test_clients_utils.py  test_keys.py  test_keys_utils.py  test_manager.py  test_servers.py  test_servers_utils.py  test_services.py  test_services_docker.py  test_utils.py
tests/snapshots/test_servers/test_create_server_custom_config/: config_custom.yml  wg0_custom.conf
tests/snapshots/test_servers/test_create_server_success/: config.yml  wg0.conf
tests/snapshots/test_servers/test_create_wg_server_config_different_subnet/: wg_server_config_custom_subnet.conf
vpn-manager/: README.md  clients.py  keys.py  manager.py  pyproject.toml  servers.py  services.py  utils.py
